--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,10 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+# Firebase services
+.firebase.confiq
+firebase.confiq.js
+
 # dotenv environment variables file
 .env
 .env.test
