--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,23 @@ web_modules/
 # Firebase services
 .firebase.confiq
 firebase.confiq.js
+.env 
+REACT_APP_API_KEY=
+
+REACT_APP_AUTHDOMAIN=
+
+REACT_APP_BASEURL=
+
+REACT_APP_PROJECT_ID=
+
+REACT_APP_STORAGEBUCKET=
+
+REACT_APP_MESSAGING_SENDER_ID=
+
+REACT_APP_APP_ID=
+
+REACT_APP_MEASUREMENT_ID=
+
 
 # dotenv environment variables file
 .env
