--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,11 @@ services:
     build:
       context: "./client"
     ports:
-      - "3000:3000"
+      - "80:3000"
+      - "443:3000"
     environment:
       - PORT=3000
-    command: "serve -s app -l 3000"
+    command: "serve -s app -l 3000 --ssl-cert /cert/hotelbooking_cert.pem --ssl-key /cert/hotelbooking_key.pem"
 
   api:
     build:
