--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "443:3000"
     environment:
       - PORT=3000
-    command: "serve -s app -l 3000 --ssl-cert /cert/hotelbooking_cert.pem --ssl-key /cert/hotelbooking_key.pem"
+    command: "serve -s app -l 3000 --ssl-cert /encryption/hotelbooking_cert.pem --ssl-key /encryption/hotelbooking_key.pem"
 
   api:
     build:
