--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,9 @@
 FROM node
 
+WORKDIR /
+
+COPY encryption encryption
+
 WORKDIR /api
 
 COPY package.json package.json
@@ -8,5 +12,3 @@ COPY package-lock.json package-lock.json
 RUN npm install
 
 COPY . .
-
-CMD [ "node", "server.js" ]
