--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.1.25",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "speakeasy": "^2.0.0",
