--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "styled-components": "^5.2.1",
+    "rxjs": "^6.6.3",
     "speakeasy": "^2.0.0",
+    "styled-components": "^5.2.1",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
