--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "history": "^5.0.0",
+    "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
