--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,9 +4,12 @@ RUN npm install -g serve
 
 WORKDIR /src
 
-COPY . .
+COPY package.json package.json
+COPY package-lock.json package-lock.json
 
 RUN npm install
+
+COPY . .
 
 RUN npm run build
 
